<resources>
    <string name="app_name">Android Library</string>
    <string name="title_activity_select">select</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Get the membership</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_s_register">s_register</string>



    <string name="login_button_label">Login</string>
    <string name="registration_popup">New here! Register</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">User name</string>



    <string name="register_page_title">REGISTER</string>
    <string name="register_page_fname_hint">First name</string>
    <string name="register_page_lname_hint">Last name</string>
    <string name="register_page_address_hint">Address</string>
    <string name="register_page_mobile_hint">Mobile number</string>
    <string name="register_page_email_hint">E-mail</string>
    <string name="register_page_password_hint">New password</string>
    <string name="register_page_confirmpassword_hint">Retype password</string>
    <string name="register_page_register_button">Register</string>

    <!-- Strings related to ebook -->
    <string name="isbn">ISBN: </string>
    <string name="eBookTitle">Title: </string>
    <string name="category">Category: </string>
    <string name="author">Author: </string>
    <string name="edition">Edition: </string>
    <string name="publishDate">Publish Date: </string>
    <string name="language">Language: </string>

    <array name="category">
        <item>IT</item>
        <item>BM</item>
        <item>EN</item>
        <item>MED</item>
    </array>

</resources>
