<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_marginVertical="15dp"
    android:layout_marginHorizontal="10dp"
    android:orientation="horizontal"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eBookTitle"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eBookTitle"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author"/>








        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edition"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/edition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publishDate"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/publishDate"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/picture"
            android:background="@drawable/cn"/>
    </LinearLayout>



</LinearLayout>