<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".s_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginTop="80dp">

        <EditText

            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/login_username_hint"

            android:textColorLink="@color/design_default_color_primary" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/login_password_hint"
            android:textColorLink="@color/design_default_color_primary" />

        <Button

            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_button_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/registerButton"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="227dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="165dp"
            android:text="@string/registration_popup"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>





</RelativeLayout>